core/tests/const_generics/usize_greater_or_eq_fail.stderr
error[E0080]: evaluation of `avail_core::const_generic_asserts::USizeGreaterOrEq::<1, 2>::OK` failed
 --> src/const_generic_asserts.rs
  |
  |     pub const OK: () = assert!(N >= M, "must be greater or equal");
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'must be greater or equal', $DIR/src/const_generic_asserts.rs:27:24
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn const_generic_ge::<1, 2>`
 --> tests/const_generics/usize_greater_or_eq_fail.rs:8:2
  |
8 |     const_generic_ge::<1, 2>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
